--- a/examples/face_landmarker/android/app/src/main/res/layout/fragment_camera.xml
+++ b/examples/face_landmarker/android/app/src/main/res/layout/fragment_camera.xml
@@ -23,8 +23,7 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/view_finder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:scaleType="fillStart" />
+        android:layout_height="match_parent" />
 
     <com.google.mediapipe.examples.facelandmarker.OverlayView
         android:id="@+id/overlay"
