--- a/examples/llm_inference/android/app/src/main/res/layout/activity_login.xml
+++ b/examples/llm_inference/android/app/src/main/res/layout/activity_login.xml
@@ -6,9 +6,23 @@
     android:gravity="center"
     android:padding="20dp">
 
-  <Button
+  <ImageButton
       android:id="@+id/btnLogin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Login with Hugging Face"/>
+      android:src="@drawable/sign_in_with_huggingface_lg_dark"
+      android:contentDescription="Login Button"
+      android:background="@null"
+      android:padding="0dp"
+      android:scaleType="centerInside"/>
+
+  <TextView
+      android:id="@+id/txtAccessMessage"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="You need Hugging Face access to download the model"
+      android:textColor="@android:color/darker_gray"
+      android:textSize="14sp"
+      android:layout_marginTop="8dp"
+      android:layout_gravity="center_horizontal"/>
 </LinearLayout>
